homework/m08/part2/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  name: httpserver-443
spec:
  ingressClassName: nginx
  rules:
    - host: m08-ssl.d3zn.lol
      http:
        paths:
          - backend:
              service:
                name: httpserver
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - m08-ssl.d3zn.lol
      secretName: m08-tls
