homework/m08/part2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-80
spec:
  ingressClassName: nginx
  rules:
    - host: m08.d3zn.x
      http:
        paths:
          - backend:
              service:
                name: httpserver
                port:
                  number: 8080
            path: /
            pathType: Prefix
